18 November 2010 W. Michael Petullo <mike@flyn.org>

	* Fix problem sharing to iTunes due to incorrect Content-Length

	* Bump version number.

	* Don't set Connection: Close header in response to /databases/1/items (iTunes)

11 November 2010 W. Michael Petullo <mike@flyn.org>

	* Bump version number.

07 November 2010 W. Michael Petullo <mike@flyn.org>

	* Significant work on an interim solution for the problem
	of memory usage while building the "/1/items" response. We
	previously simply called foreach...add_entry_to_mlcl and later
	serialized the entire structure. This has the disadvantage that
	the entire response must be in memory before libsoup sends it
	to the client. Now, we transmit portions at a time.

31 October 2010 W. Michael Petullo <mike@flyn.org>

	* Bump version number.

24 October 2010 W. Michael Petullo <mike@flyn.org>

	* Fix _dmap_share_build_filter to support commas in values.

23 October 2010 W. Michael Petullo <mike@flyn.org>

	* Provide a configuration-time warning if libsoup < 2.32; this
	is required to interact with Apple Remote App.

21 October 2010 W. Michael Petullo <mike@flyn.org>

	* Advertise support for dmap.supportsupdate even though we don't
	support it. This should fix DACP interaction with Apple Remote
	v2.0.1 (229). Add real support for dmap.supportsupdate to TODO.

16 October 2010 W. Michael Petullo <mike@flyn.org>

	* Add terminating record to meta_data_map in dpap-share.c.

01 October 2010 W. Michael Petullo <mike@flyn.org>

	* Fix missed "daap.songX" to "songX" change.

29 September 2010 W. Michael Petullo <mike@flyn.org>

	* Fix some bugs related to the recent DmapMdnsPublisher singleton
	change.

09 September 2010 W. Michael Petullo <mike@flyn.org>

	* Allow two sub-DMAP protocols (e.g., DAAP and DPAP) in one
	process.

07 September 2010 W. Michael Petullo <mike@flyn.org>

	* Allow dmap-mdns-*-dnssd.c to compile.

06 September 2010 W. Michael Petullo <mike@flyn.org>

	* Fix serving to iTunes 10.
